# professionalsclick

./: .gitignore  .replit  README.md  app.clean.py  app.py  pyproject.toml  replit.md
attached_assets/: Pasted-Website-Project-Brief-Project-Name-ProfessionalsClick-General-Idea-This-websi-1758545908540_1758545908540.txt
balei-miktzoa-site/: .env  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  README.md  app.clean.py  app.clean.py.backup  package-lock.json  package.json  video.worker-hero-video
balei-miktzoa-site/data/: approved.json  pending.json  worker_reviews.json
balei-miktzoa-site/reports/: ruff.txt  vulture.txt
balei-miktzoa-site/scripts/: backfill_languages.py  build_all_translations.py  smoke_ai_writer.py  translations_sources.json
balei-miktzoa-site/services/: __init__.py  ai_variants.py  ai_writer.py  json_store.py  ollama_client.py  translation.py  worker_descriptions.py
balei-miktzoa-site/templates/: 404.html  500.html  add_review.html  admin.html  base.html  estimate.html  home.html  logo_showcase.html  niches.html  request.html  service_landing.html  worker_reviews.html  workers_list.html  works.html
balei-miktzoa-site/tests/: test_translate.py
data/: pending.json  worker_reviews.json
data/analytics/: 2025-08-22.jsonl  2025-09-03.jsonl
scripts/: build_all_translations.py  site-data - translations.csv
services/: ai_variants.py  ai_writer.py
static/css/: add_review.css  navbar.css  style.css  why_us.css  (+2 more)
templates/: admin.html  base.html  home.html  professionals_listing.html  request.html  workers_list.html
(+123 files in other folders)
